--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,6 +6,12 @@ body{
 {
     display: inline-block;
 }
+.navbar-inverse .navbar-brand {
+    color: grey;
+}
+
+
+
 #keepClass{
     font-family: 'Product Sans',Arial,sans-serif; /*iNTEGRATE THE FONT INTO YOUR CSS*/
     /*margin-top: 10px;*/
@@ -542,7 +548,7 @@ a {
 
     -webkit-border-radius: 2px;
             border-radius: 2px;
-    /*box-shadow: 0 0px 0px rgba(0,0,0,0), 0 -5px 21px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);;*/
+    box-shadow: 0 0px 0px rgba(0,0,0,0), 0 -5px 21px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);;
 
 }
 
@@ -605,10 +611,13 @@ a {
 
 #reminder,#more{
   background-color: rgba(238, 238, 238, 0);
-  margin-left:2%;
+  margin-left:1%;
 }
 #reminder:hover{
   color:teal;
+}
+#reminder1:hover{
+  color:red;
 }
 #more:hover{
   color:teal;
@@ -638,7 +647,7 @@ color:teal;
 
 #noteinner{
   font-size:16px;
-  padding: 0px 14px 1px 8px;
+  padding: 3px 14px 2px 10px;
   font-family: Gill Sans, Verdana;
   letter-spacing: 0.5px;
 }
@@ -658,9 +667,19 @@ color:teal;
 #logOutId:hover{
   color:white;
 }
-#query:hover{
-  background-color: yellow;
+#query{
+  outline: none;
 }
+#gridgly:hover{
+    color:white;
+}
+#listgly:hover{
+    color:white;
+}
+
+/*#query:hover{
+  background-color: transparent;
+}*/
 /*#listviewgly:hover{
   color:white;
 }*/
