--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,9 +26,14 @@ body{
 
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
     color: #fff;
-    background-color: #fdf2f2;
+    background-color: black;
 }
 
+
+/*.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
+    color: #fff;
+    background-color: #080808;
+}*/
 
 #login-dp{
     min-width: 250px;
