--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -3,6 +3,13 @@ body{
   background-color: #e8e8e8;;
   /*background-image: url('../images/bck.jpg');*/
 }
+.cropArea {
+  background: #E4E4E4;
+  overflow: hidden;
+  width:500px;
+  height:350px;
+}
+
 .hide
 {
     display: inline-block;
@@ -536,7 +543,7 @@ a {
 /*grid view card style*/
 .preid
 {
-
+  width:240px;
   background-color: rgba(232, 232, 232, 0.19);
   background-color: white;
     position: relative;
@@ -588,9 +595,9 @@ a {
 }
 .cardhover:hover::after, .preid:focus::after {
   opacity: 1;
-  -o-transform:rotate(-3deg);
+  /*-o-transform:rotate(-3deg);
   -webkit-transform:rotate(-3deg);
-  -moz-transform:rotate(-3deg);
+  -moz-transform:rotate(-3deg);*/
   position:relative;
   top:-5px;
   background:#ccf;
@@ -704,7 +711,11 @@ color:teal;
 #caret:hover{
   color:white;
 }
-
+.circular--square :hover {
+    -o-transform:rotate(360deg);
+    -webkit-transform:rotate(360deg);
+    -moz-transform:rotate(360deg);
+}
 .circular--square {
   font-size:10px;
    text-align: center;
@@ -716,15 +727,15 @@ color:teal;
    margin-left: 15px;
    top: 0px;
     border:3px solid black;
-    background-color:#333;
+    background-color:#a94442;
     color:black;
-    padding: 0px;
+    padding: 8px;
     font-size: 55px;
 }
 .circular--square1 {
-  background-color:grey;
+  background-color:#a94442;
   color:black;
-  padding:0px
+  padding:2px;
   font-size:16px;
    position: relative;
    width: 30px;
@@ -734,8 +745,6 @@ color:teal;
    /*border:3px solid grey;*/
    border:3px solid #333;
    /*background-color:grey;*/
-
-
 }
 
 
