--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -621,6 +621,7 @@ a {
 
 /*list view card style*/
 .preid1{
+  width:780px;
    background-color: white;
    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 
@@ -628,9 +629,11 @@ a {
     position: relative;
     display: inline-block;
     overflow: hidden;
+    word-wrap:break-word;
+
     /*margin-left: 12%;*/
     box-sizing: border-box;
-    width: 108%;
+    /*width: 108%;*/
     /*margin: 4px;*/
     margin-top: 8px;
     margin-bottom: 6px;
@@ -739,25 +742,51 @@ color:teal;
    margin-left: 15px;
    top: 0px;
     border:3px solid black;
-    background-color:#a94442;
+    background-color:#430000;
     color:white;
     padding: 8px;
     font-size: 55px;
+
 }
 .circular--square1 {
-  background-color:#a94442;
+  /*background-color:#7d0000;*/
+  background-color: #fa3e3e;
+  border-radius: 24px;
   color:white;
   padding:2px;
-  font-size:16px;
+  /*cursor: default;*/
+  font-size: 13px;
    position: relative;
    width: 30px;
    height: 30px;
    overflow: hidden;
    border-radius: 50%;
-   /*border:3px solid grey;*/
    border:3px solid #333;
-   /*background-color:grey;*/
 }
+#logoutdropdown{
+  width:335px;
+  padding-left: 25px;
+  padding-top: 9px;
+  height: 200px;
+  margin-left:-320;
+  margin-right:20%;
+  background: #E8E8E8;
+  box-shadow: 0px 5px 7px rgba(33,33,33,.7);
+}
+
+#pinned,#others{
+/*margin:2px 0px 12px 12px;*/
+margin:22px 16px ;
+
+/*font-weight: bold;*/
+color: rgba(0,0,0,.54);
+font-family: 'Roboto',arial,sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+      visibility: visible;
+
+}
+
 
 
 
