--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -489,6 +489,12 @@ ul{
     outline: none;
     background-color: white;
 }
+/*#saveProfilePic{
+  color: teal;
+  border: none;
+  outline: none;
+  background-color: white;
+}*/
 #tglid:hover{
     color: white;
 }
@@ -557,7 +563,7 @@ a {
   width:260px;
   background-color: rgba(232, 232, 232, 0.19);
   background-color: white;
-    position: relative;
+    /*position: relative;*/
     word-wrap:break-word;
     display: inline-block;
     overflow: hidden;
@@ -626,7 +632,7 @@ a {
    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 
    /*box-shadow: 0 4px 20px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);*/
-    position: relative;
+    /*position: relative;*/
     display: inline-block;
     overflow: hidden;
     word-wrap:break-word;
@@ -726,42 +732,55 @@ color:teal;
 #caret:hover{
   color:white;
 }
-.circular--square :hover {
+/*.circular--square :hover {
     -o-transform:rotate(360deg);
     -webkit-transform:rotate(360deg);
     -moz-transform:rotate(360deg);
-}
+}*/
 .circular--square {
+      background-size: 96px 96px;
+  overflow: hidden;
   font-size:10px;
    text-align: center;
    position: relative;
-   width: 100px;
-   height: 100px;
-   overflow: hidden;
+   width: 111px;
+   height: 111px;
+   /*overflow: hidden;*/
    border-radius: 50%;
    margin-left: 15px;
+   margin-right: 20px;
    top: 0px;
-    border:3px solid black;
-    background-color:#430000;
+    border:0.5px solid black;
+    background-color:#E57248;
     color:white;
-    padding: 8px;
+    padding: 0px;
     font-size: 55px;
 
 }
+.circular--square:hover{
+  transform: scale3d(1.060, 1.060, 1);
+}
 .circular--square1 {
+  text-align: center;
+  overflow: hidden;
   /*background-color:#7d0000;*/
-  background-color: #fa3e3e;
-  border-radius: 24px;
+  background-color: #fb4a2a;
+  border-radius: 50%;
   color:white;
-  padding:2px;
+  padding:0px;
   /*cursor: default;*/
   font-size: 13px;
    position: relative;
-   width: 30px;
+   width: 44px;
    height: 30px;
    overflow: hidden;
    border-radius: 50%;
-   border:3px solid #333;
+   border:0.5px solid #333;
+   /*border:0px;*/
+}
+.circular--square1:hover{
+  transform: scale3d(1.2, 1.2, 2);
+  /*transform: rotate(180deg);*/
 }
 #logoutdropdown{
   width:335px;
