--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -14,20 +14,20 @@ body{
 {
     display: inline-block;
 }
-.navbar-inverse .navbar-brand {
-    color: grey;
-}
 
-
-
+/*margin-top: 10px;*/
+/*margin-top: -3px;*/
+/*margin-top: -3px;*/
 #keepClass{
-
     font-family: 'Product Sans',Arial,sans-serif; /*iNTEGRATE THE FONT INTO YOUR CSS*/
-    /*margin-top: 10px;*/
-    font-size: 22px;
+     font-size: 24px;
+     font-weight: 400;
+    /*font-weight: 200px;*/
+    /*text-align: center;*/
+    /*text-shadow: 0 1px 1px #fff;*/
+     /*color: #d54d7b;*/
+     margin-left: -11px;
     position: relative;
-    /*margin-top: -3px;*/
-    /*margin-top: -3px;*/
     display: inline-block;
     padding-left: 8px;
     vertical-align: middle;
@@ -49,7 +49,6 @@ body{
 {
     display: block;
     /*[contenteditable=true]:empty:before{*/
-
     content: attr(placeholder);
 }
 
@@ -68,25 +67,17 @@ body{
 {
     color: red;
 }
+
 #content:empty:before
 {
     display: block;
-
     content: attr(placeholder);
 }
+
 #msgDivId
 {
-    /*margin : 8px;*/
     width: 70%,
     background-color:rgba(204, 204, 204, .28);
-}
-
-
-.container-fluid {
-  padding-right: 1%;
-  padding-left: 1%;
-  /*margin-left: auto;*/
-  margin-right: 1px;
 }
 
 #dummyTitle{
@@ -99,7 +90,6 @@ body{
     box-sizing: border-box;
     /*box-shadow: 0 0px 0px rgba(0,0,0,0), 0 -5px 21px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);;*/
     box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-
     overflow: hidden;
     position: relative;
     -webkit-border-radius: 2px;
@@ -112,11 +102,6 @@ body{
     transition-timing-function: ease-in;
 }
 
-
-/*.row {
-
-    margin-top: 0%;
-}*/
 
 #notes
 {
@@ -138,10 +123,9 @@ body{
     background-color: white;
     box-shadow: 5px 5px 5px #888;
 }
+
 .note-inner
 {
-    /*border:8px;*/
-    /*margin:8px;*/
     position: relative;
     min-height: 100%;
     word-wrap: break-word;
@@ -163,22 +147,17 @@ body{
     font-size: 18px;
     /*background-color: rgba(204, 204, 204, 0.28);*/
     font-weight: bold;
-
     box-sizing: border-box;
-
     border: none;
-
 }
+
 #title1
 {
     font-family: 'Roboto',arial,sans-serif;
     font-size: 17px;
     line-height: 19px;
-
     min-height: 46px;
     padding: 12px 15px 15px 15px;
-    /*background-color: rgba(204, 204, 204, 0.28);*/
-    /*border:1px solid black;*/
     border: none;
     outline: none;
 }
@@ -201,189 +180,13 @@ body{
 {
     border: 1px solid;
 }
-#wrapper
-{
-    margin-top: 0;
-    padding-left: 0;
-
-    -webkit-transition: all .5s ease;     /*change the wrapper' with a smooth transition effect:*/
-       -moz-transition: all .5s ease;     /*That div will take 0.5 a second when the mouse is over it to turn from 1color to another color.*/
-         -o-transition: all .5s ease;   /*ease define a function that describes how a transition will proceed over its duration, allowing a transition to change speed during its course.*/
-            transition: all .5s ease;
-}
-
-#wrapper.toggled
-{
-    /*padding-left: 170px;*/
-}
-.navbar-inverse
-{
-    border-color: #eee;
-    background-color: #eee;
-}
-#sidebar-wrapper
-{
-    position: fixed;
-    z-index: 1000;
-    left: 250px;
-
-    overflow-y: auto;
-
-    width: 0;
-    height: 120%;
-    margin-left: -250px;
-
-    -webkit-transition: all .5s ease;
-       -moz-transition: all .5s ease;
-         -o-transition: all .5s ease;
-            transition: all .5s ease;
-
-    background: rgba(255, 187, 0, .11);
-}
-.sidebar-nav > .sidebar-brand a
-{
-    color: grey;
-}
-#wrapper.toggled #sidebar-wrapper
-{
-    width: 170px;
-}
-#page-content-wrapper
-{
-    width: 100%;
-    /*padding: 15px;*/
-}
-
-#wrapper.toggled #page-content-wrapper{
-    position: relative;
-    margin-right: -250px;
-}
-
-/* Sidebar Styles */
-ol,
-ul{
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-.sidebar-nav{
-    position: absolute;
-    top: 0;
-
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li
-{
-    line-height: 40px;
-    text-indent: 20px;
-}
-.sidebar-nav li a
-{
-    display: block;
-    text-decoration: none;
-    color: #080000;
-}
-.sidebar-nav li a
-{
-    display: block;
-
-    text-decoration: none;
-
-    color: #999;
-}
-
-.sidebar-nav li a:hover
-{
-    text-decoration: none;
-
-    color: #fff;
-    background: rgba(255, 255, 255, .2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus
-{
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand
-{
-    font-size: 18px;
-    line-height: 60px;
-
-    height: 65px;
-}
-
-.sidebar-nav > .sidebar-brand a
-{
-    color: grey;
-}
-
-.sidebar-nav > .sidebar-brand a:hover
-{
-    color: #fff;
-    background: none;
-}
-
-@media (min-width: 320px)
-{
-    #wrapper
-    {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled
-    {
-        padding-left: 0;
-    }
-    .navbar-fixed-top .navbar-inner,
-    .navbar-fixed-bottom .navbar-inner
-    {
-        padding: 3px;
-    }
-}
 
 
-@media (min-width: 768px)
-{
-    #wrapper
-    {
-            padding-left: 170px;
-    }
-
-    #wrapper.toggled
-    {
-        padding-left: 0;
-    }
-}
-
-@media (max-width: 700px)
-{
-    #wrapper
-    {
-        padding-left: 0;
-    }
-
-    #wrapper.toggled
-    {
-        padding-left: 0;
-    }
-
-    #search  {
-        display: none;
-    }
-}
 .glyphicon glyphicon-user{
     position: fixed;
     z-index: 1000;
     right: 0;
-
     overflow-y: auto;
-
     width: 320px;
     height: 100%;
     margin-right: -320px;
@@ -433,23 +236,21 @@ ul{
 .todotittle{
     position: absolute;
     z-index: 0;
-
     padding: 14px;
-
     pointer-events: none;
-
     color: rgba(0,0,0,.54);
 }
 .todocontent{
     position: absolute;
     z-index: 0;
-
     padding: 14px;
-
     pointer-events: none;
-
     color: rgba(0,0,0,.54);
 }
+
+/*#gridgly,#listgly{
+  display:none;
+}*/
 .gridviewnew{
   margin-top:30px;
   /*width:260px;*/
@@ -460,26 +261,17 @@ ul{
   transition-property: opacity,transform;
 }
 
-/*.listcss{
-    width: 600px;
-    display:block;
-    transition-property: opacity,transform;
-}*/
 #mainMsgBox{
-    /*margin:2px;*/
-    /*margin-left: -50px;*/
     width: 84%;
     margin-top: 30px;
 }
-#delete:hover{
+#delete:hover,#makeCopy:hover{
     color: teal;
 }
 #saveReminder:hover{
-  colo:red;
+  color:red;
 }
-#makeCopy:hover{
-  color:teal;
-}
+
 #done:hover{
     color: red;
     background-color: rgba(232, 169, 165, 0.09);
@@ -491,18 +283,7 @@ ul{
     outline: none;
     background-color: white;
 }
-/*#saveProfilePic{
-  color: teal;
-  border: none;
-  outline: none;
-  background-color: white;
-}*/
-#tglid:hover{
-    color: white;
-}
-/*.dropdown open{
-  background-color: #fb0;
-}*/
+
 .dropdown-toggle {
     background-color: rgba(238, 238, 238, 0);
 }
@@ -519,19 +300,26 @@ a {
 
 #inputid
 {
-    font-size: 12px;
-
+  background: rgba(0,0,0,0.04);
+  border: 1px solid rgba(0,0,0,0);
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 650px;
+  position: relative;
+  -webkit-transition: background 100ms ease-in,width 100ms ease-out;
+  transition: background 100ms ease-in,width 100ms ease-out;
+    /*font-size: 12px;
     color: #eee;
     border-color: transparent;
     border-radius: 0;
     background-color:rgba(0, 0, 0, 0)
-    /*background-color: #313146;*/
-    box-shadow: 0 0;
+    box-shadow: 0 0;*/
 }
 .btn-block
 {
     position: relative;
-
     color: #fff;
     border-color: rgba(182, 189, 182, 0);
     /*border-collapse: separate;*/
@@ -545,14 +333,10 @@ a {
     font-weight: 400;
     font-style: normal;
     line-height: 1;
-
     position: relative;
     top: 1px;
-
     display: inline-block;
-
     color: #767676;
-
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -560,6 +344,7 @@ a {
   position :relative;
   display: block;
 }
+
 /*grid view card style*/
 .preid
 {
@@ -575,7 +360,7 @@ a {
     width: 100%;
     margin: 4px 4px 4px -4px;
     padding: 0;
-    -webkit-transition-timing-function: ease-in;
+    -webkit-transitioncursor-timing-function: ease-in;
             transition-timing-function: ease-in;
     -webkit-transition-duration: .218s;
             transition-duration: .218s;
@@ -585,9 +370,7 @@ a {
     -webkit-border-radius: 2px;
             border-radius: 2px;
             box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-
     /*box-shadow: 0 0px 0px rgba(0,0,0,0), 0 -5px 21px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);*/
-
 }
 
 /*grid and listview card style after hover*/
@@ -615,9 +398,6 @@ a {
 }
 .cardhover:hover::after, .preid:focus::after {
   opacity: 1;
-  /*-o-transform:rotate(-3deg);
-  -webkit-transform:rotate(-3deg);
-  -moz-transform:rotate(-3deg);*/
   position:relative;
   top:-5px;
   background:#ccf;
@@ -633,17 +413,10 @@ a {
   width:780px;
    background-color: white;
    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-
-   /*box-shadow: 0 4px 20px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);*/
-    /*position: relative;*/
     display: inline-block;
     overflow: hidden;
     word-wrap:break-word;
-
-    /*margin-left: 12%;*/
     box-sizing: border-box;
-    /*width: 108%;*/
-    /*margin: 4px;*/
     margin-top: 8px;
     margin-bottom: 6px;
     padding: 0;
@@ -657,6 +430,11 @@ a {
 
     -webkit-border-radius: 2px;
             border-radius: 2px;
+    /*margin-left: 12%;*/
+    /*width: 108%;*/
+    /*margin: 4px;*/
+    /*box-shadow: 0 4px 20px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);*/
+    /*position: relative;*/
     /*box-shadow: 0 4px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);*/
 }
 
@@ -668,15 +446,13 @@ a {
   background-color: rgba(238, 238, 238, 0);
   margin-left:1%;
 }
-#reminder:hover{
+#reminder:hover,#more:hover{
   color:teal;
 }
 #reminder1:hover{
   color:red;
 }
-#more:hover{
-  color:teal;
-}
+
 #remindercss{
   padding: 2px 4px 3px 4px;
   /*margin-left: 4px;*/
@@ -685,9 +461,7 @@ a {
   border-top: 0.5px dashed;
   height :26px;
 }
-/*#remindercss:hover{
-  background-color: black;
-}*/
+
 #footer{
     padding: 2px 4px 3px 4px;
     height:40px;
@@ -707,43 +481,41 @@ color:teal;
   letter-spacing: 0.5px;
 }
 
-/*#innotegrid{
-  display:block;
-  transition-property: opacity,transform;
-}*/
-/*#innote{
-  width: 260px;
-}*/
-/*#innotelist{
-  display:block;
-  transition-property:
-  opacity,transform;
-}*/
+#query{
+  width:400px;
+  height:40px;
+  outline: none;
+  background-color: #ddd;
+  border:none;
+  margin-left: 63px;
+  /*box-shadow: -8px 4px 12px grey;*/
+}
 
+#inputid :focus{
+  background-color: white;
+  /*box-shadow: -9px 2px 12px grey;*/
+}
 #logOutId:hover{
   color:white;
 }
-#query{
-  outline: none;
-  background-color: #ddd;
+
+/*glyphicon hover style*/
+#tglid:hover{
+    cursor: pointer;
+    color: white;
+    transform: scale3d(1.2,1.2,1);
 }
-#inputid :focus{
-  background-color: white;
-}
-#gridgly:hover{
+#gridgly:hover,#listgly:hover,#refreshicon:hover{
+    cursor: pointer;
     color:white;
+    transform: scale3d(1.5, 1.5, 1);
+
 }
-#listgly:hover{
-    color:white;
-}
-#caret:hover{
-  color:white;
-}
-/*.circular--square :hover {
-    -o-transform:rotate(360deg);
-    -webkit-transform:rotate(360deg);
-    -moz-transform:rotate(360deg);
+/*.gridstyle:hover{
+  color:green;
 }*/
+
+
 .circular--square {
       background-size: 96px 96px;
   overflow: hidden;
@@ -765,6 +537,7 @@ color:teal;
 
 }
 .circular--square:hover{
+      cursor: pointer;
   transform: scale3d(1.060, 1.060, 1);
 }
 .circular--square1 {
@@ -788,6 +561,7 @@ color:teal;
    /*border:0px;*/
 }
 .circular--square1:hover{
+      cursor: pointer;
   transform: scale3d(1.2, 1.2, 2);
   /*transform: rotate(180deg);*/
 }
@@ -804,18 +578,251 @@ color:teal;
 
 #pinned,#others{
 /*margin:2px 0px 12px 12px;*/
-margin:22px 16px ;
-color: rgba(0,0,0,.54);
-font-family: 'Roboto',arial,sans-serif;
+  margin:22px 16px ;
+  color: rgba(0,0,0,.54);
+  font-family: 'Roboto',arial,sans-serif;
   font-size: 14px;
   font-weight: 700;
-      visibility: visible;
+  visibility: visible;
 
 }
 
 #imgpath:hover {
   background-border:1px solid blue;
 }
+@media (min-width: 320px)
+{
+    #wrapper
+    {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled
+    {
+        padding-left: 0;
+    }
+    .navbar-fixed-top .navbar-inner,
+    .navbar-fixed-bottom .navbar-inner
+    {
+        padding: 3px;
+    }
+}
+
+
+@media (min-width: 768px)
+{
+    #wrapper
+    {
+            padding-left: 170px;
+    }
+
+    #wrapper.toggled
+    {
+        padding-left: 0;
+    }
+}
+
+@media (max-width: 700px)
+{
+    #wrapper
+    {
+        padding-left: 0;
+    }
+
+    #wrapper.toggled
+    {
+        padding-left: 0;
+    }
+
+    #search  {
+        display: none;
+    }
+}
+
+.center-block {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.input-group .icon-addon .form-control {
+    border-radius: 0;
+}
+
+.icon-addon {
+    position: relative;
+    color: #555;
+    display: block;
+}
+
+.icon-addon:after,
+.icon-addon:before {
+    display: table;
+    content: " ";
+}
+
+.icon-addon:after {
+    top: 1px
+}
+
+.icon-addon.addon-lg .form-control {
+    line-height: 1.33;
+    height: 46px;
+    font-size: 18px;
+    padding: 10px 16px 10px 40px;
+}
+
+.icon-addon.addon-sm .form-control {
+    height: 30px;
+    padding: 5px 10px 5px 28px;
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.icon-addon.addon-lg .fa,
+.icon-addon.addon-lg .glyphicon {
+    font-size: 18px;
+    margin-left: 0;
+    left: 11px;
+    top: 4px;
+}
+
+.icon-addon.addon-md .form-control,
+.icon-addon .form-control {
+    padding-left: 30px;
+    float: left;
+    font-weight: normal;
+}
+
+.icon-addon.addon-sm .fa,
+.icon-addon.addon-sm .glyphicon {
+    margin-left: 0;
+    font-size: 12px;
+    left: 5px;
+    top: -1px
+}
+
+.icon-addon .form-control:focus + .glyphicon,
+.icon-addon:hover .glyphicon,
+.icon-addon .form-control:focus + .fa,
+.icon-addon:hover .fa {
+    color: #2580db;
+}
+
+/*.listcss{
+    width: 600px;
+    display:block;
+    transition-property: opacity,transform;
+}*/
+
+/*#remindercss:hover{
+  background-color: black;
+}*/
+/*-o-transform:rotate(-3deg);
+-webkit-transform:rotate(-3deg);
+-moz-transform:rotate(-3deg);*/
+/*#innotegrid{
+  display:block;
+  transition-property: opacity,transform;
+}*/
+/*#innote{
+  width: 260px;
+}*/
+/*#innotelist{
+  display:block;
+  transition-property:
+  opacity,transform;
+}*/
+/*#caret:hover{
+  color:white;
+}*/
+/*.circular--square :hover {
+    -o-transform:rotate(360deg);
+    -webkit-transform:rotate(360deg);
+    -moz-transform:rotate(360deg);
+}*/
+
+/*.row {
+
+    margin-top: 0%;
+}*/
+/*.gb_Cd.gb_Nd .gb_zd .gb_ke {
+    margin-left: 0;
+    margin-right: 0;
+}*/
+/*search box*/
+/*.gb_ke {
+    background: rgba(0,0,0,0.04);
+    border: 1px solid rgba(0,0,0,0);
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 650px;
+    position: relative;
+    -webkit-transition: background 100ms ease-in,width 100ms ease-out;
+    transition: background 100ms ease-in,width 100ms ease-out;
+}
+
+.gb_qc.gb_Bd:not(.gb_yd) .gb_zd {
+    padding-right: 16px;
+}
+
+.gb_De {
+    float: left;
+}
+.gb_Oe {
+    display: none;
+    float: left;
+}
+.gb_ke button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0 4px;
+    line-height: 0;
+}
+.gb_ke button svg, .gb_ke button img {
+    padding: 7px;
+    margin: 4px;
+}
+.gb_pc svg, .gb_bc svg {
+    color: black;
+    opacity: .54;
+}
+.gb_pc svg {
+    fill: currentColor;
+}
+svg[Attributes Style] {
+    height: 24px;
+    width: 24px;
+}
+
+ svg {
+    transform-origin: 50% 50% 0px;
+}
+
+.gb_Te {
+    height: 46px;
+    padding: 0 11px;
+    margin-right: 48px;
+}
+.gb_Be {
+    border: none;
+    font: normal 16px Roboto,sans-serif;
+    -webkit-font-variant-ligatures: none;
+    font-variant-ligatures: none;
+    height: 24px;
+    outline: none;
+    padding: 11px 0 11px 16px;
+    width: 100%;
+    background: transparent;
+}
+.gb_Ed {
+    line-height: 0;
+    -webkit-user-select: none;
+}*/
 
 
 /*#query:hover{
