--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,21 @@
-body{
+/*body{
     background-color: white;
     margin : 0;
-}
+}*/
 #a{
   margin-left: 0px;
 
 }
+.navbar>.container-fluid .navbar-brand {
+    margin-left: 9px;
+}
+/*.navbar-inverse .navbar-brand {
+    color: grey;
+}*/
+
 .navbar-inverse .navbar-brand {
-    color: #060000;
+    color: #d54d7b;;
+
 }
 .navbar-text {
     margin-top: 15px;
@@ -37,6 +45,143 @@ body{
     color: #fff;
     background-color: #080808;
 }*/
+
+
+
+
+#wrapper
+{
+    margin-top: 0;
+    padding-left: 0;
+
+    -webkit-transition: all .5s ease;     /*change the wrapper' with a smooth transition effect:*/
+       -moz-transition: all .5s ease;     /*That div will take 0.5 a second when the mouse is over it to turn from 1color to another color.*/
+         -o-transition: all .5s ease;   /*ease define a function that describes how a transition will proceed over its duration, allowing a transition to change speed during its course.*/
+            transition: all .5s ease;
+}
+
+#wrapper.toggled
+{
+    /*padding-left: 170px;*/
+}
+.navbar-inverse
+{
+    border-color: #eee;
+    background-color: #eee;
+}
+#sidebar-wrapper/*.row {
+
+    margin-top: 0%;
+}*/
+{
+    position: fixed;
+    z-index: 1000;
+    left: 250px;
+
+    overflow-y: auto;
+
+    width: 0;
+    height: 120%;
+    margin-left: -250px;
+
+    -webkit-transition: all .5s ease;
+       -moz-transition: all .5s ease;
+         -o-transition: all .5s ease;
+            transition: all .5s ease;
+
+    background: rgba(255, 187, 0, .11);
+}
+.sidebar-nav > .sidebar-brand a
+{
+    color: grey;
+}
+#wrapper.toggled #sidebar-wrapper
+{
+    width: 170px;
+}
+#page-content-wrapper
+{
+    width: 100%;
+    /*padding: 15px;*/
+}
+
+#wrapper.toggled #page-content-wrapper{
+    position: relative;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+ol,
+ul{
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.sidebar-nav{
+    position: absolute;
+    top: 0;
+
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;/*.row {
+
+    margin-top: 0%;
+}*/
+}
+
+.sidebar-nav li
+{
+    line-height: 40px;
+    text-indent: 20px;
+}
+.sidebar-nav li a
+{
+    display: block;
+    text-decoration: none;
+    color: #080000;
+}
+.sidebar-nav li a
+{
+    display: block;
+
+    text-decoration: none;
+
+    color: #999;
+}
+
+.sidebar-nav li a:hover
+{
+    text-decoration: none;
+
+    color: #fff;
+    background: rgba(255, 255, 255, .2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus
+{
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand
+{
+    font-size: 18px;
+    line-height: 60px;
+    height: 65px;
+}
+
+.sidebar-nav > .sidebar-brand a
+{
+    color: grey;
+}
+
+.sidebar-nav > .sidebar-brand a:hover
+{
+    color: #fff;
+    background: none;
+}
+
 
 #login-dp{
     min-width: 250px;
@@ -78,6 +223,12 @@ body{
     color: #fff;
     background-color:#59b5fa;
 }
+.container-fluid {
+  padding-right: 1%;
+  padding-left: 1%;
+  /*margin-left: auto;*/
+  margin-right: 1px;
+}
 
 @media(max-width:768px){
     #login-dp{
@@ -89,3 +240,42 @@ body{
         border-top:0 none;
     }
 }
+/*.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}*/
+
+/*.tooltip  {
+  text-size:10px;
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}*/
