--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -26,10 +26,10 @@ body{
     /*text-align: center;*/
     /*text-shadow: 0 1px 1px #fff;*/
      /*color: #d54d7b;*/
-     margin-left: -11px;
+     margin-left: -25px;
     position: relative;
     display: inline-block;
-    padding-left: 8px;
+    padding: 8px;
     vertical-align: middle;
     vertical-align: middle;
     color: teal;
@@ -410,7 +410,7 @@ a {
 
 /*list view card style*/
 .preid1{
-  width:780px;
+  width:100%;
    background-color: white;
    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
     display: inline-block;
@@ -505,12 +505,22 @@ color:teal;
     color: white;
     transform: scale3d(1.2,1.2,1);
 }
-#gridgly:hover,#listgly:hover,#refreshicon:hover{
+#gridgly:hover,#listgly:hover{
     cursor: pointer;
     color:white;
     transform: scale3d(1.5, 1.5, 1);
 
 }
+/*#refreshicon{
+  fill : white;
+}*/
+#refreshicon:hover{
+    cursor: pointer;
+    fill: white; /*fill used for svg color change*/
+    transform: scale3d(1.5, 1.5, 1);
+
+}
+
 /*.gridstyle:hover{
   color:green;
 }*/
@@ -561,6 +571,7 @@ color:teal;
    /*border:0px;*/
 }
 .circular--square1:hover{
+  border: 3px solid teal;
       cursor: pointer;
   transform: scale3d(1.2, 1.2, 2);
   /*transform: rotate(180deg);*/
@@ -645,7 +656,22 @@ color:teal;
     margin-right: auto;
 }
 
-.input-group .icon-addon .form-control {
+
+
+
+.gb_ke button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0 4px;
+    line-height: 0;
+}
+.gb_De {
+    float: left;
+}
+
+/*.input-group .icon-addon .form-control {
     border-radius: 0;
 }
 
@@ -707,7 +733,7 @@ color:teal;
 .icon-addon .form-control:focus + .fa,
 .icon-addon:hover .fa {
     color: #2580db;
-}
+}*/
 
 /*.listcss{
     width: 600px;
