--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-/*body{
-    background-color: white;
-    margin : 0;
-}*/
 #a{
   margin-left: 0px;
 
@@ -15,13 +11,14 @@
 
 .navbar-inverse .navbar-brand {
     color: #d54d7b;;
-
 }
+
 .navbar-text {
     margin-top: 15px;
     margin-bottom: 15px;
     color: #060000;
 }
+
 #navbarColor{
   background-color: rgb(255, 187, 0);
 }
@@ -30,7 +27,6 @@
     color: #fb0;
     background-color: transparent;
 }
-
 
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
     color: #fff;
@@ -41,16 +37,8 @@
   margin-top: -7px;
     max-width: none;
 }
-/*.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
-    color: #fff;
-    background-color: #080808;
-}*/
 
-
-
-
-#wrapper
-{
+#wrapper{
     margin-top: 0;
     padding-left: 0;
 
@@ -60,19 +48,18 @@
             transition: all .5s ease;
 }
 
-#wrapper.toggled
-{
+/*#wrapper.toggled
+{*/
     /*padding-left: 170px;*/
-}
+/*}*/
+
 .navbar-inverse
 {
     border-color: #eee;
     background-color: #eee;
 }
-#sidebar-wrapper/*.row {
 
-    margin-top: 0%;
-}*/
+#sidebar-wrapper
 {
     position: fixed;
     z-index: 1000;
@@ -91,14 +78,17 @@
 
     background: rgba(255, 187, 0, .11);
 }
+
 .sidebar-nav > .sidebar-brand a
 {
     color: grey;
 }
+
 #wrapper.toggled #sidebar-wrapper
 {
     width: 170px;
 }
+
 #page-content-wrapper
 {
     width: 100%;
@@ -124,10 +114,7 @@ ul{
     width: 250px;
     margin: 0;
     padding: 0;
-    list-style: none;/*.row {
-
-    margin-top: 0%;
-}*/
+    list-style: none;
 }
 
 .sidebar-nav li
@@ -135,25 +122,24 @@ ul{
     line-height: 40px;
     text-indent: 20px;
 }
+
 .sidebar-nav li a
 {
     display: block;
     text-decoration: none;
     color: #080000;
 }
+
 .sidebar-nav li a
 {
     display: block;
-
     text-decoration: none;
-
     color: #999;
 }
 
 .sidebar-nav li a:hover
 {
     text-decoration: none;
-
     color: #fff;
     background: rgba(255, 255, 255, .2);
 }
@@ -182,47 +168,56 @@ ul{
     background: none;
 }
 
-
 #login-dp{
     min-width: 250px;
     padding: 14px 14px 0;
     overflow:hidden;
     background-color:rgba(255,255,255,.8);
 }
+
 #login-dp .help-block{
     font-size:12px
 }
+
 #login-dp .bottom{
     background-color:rgba(255,255,255,.8);
     border-top:1px solid #ddd;
     clear:both;
     padding:14px;
 }
+
 #login-dp .social-buttons{
     margin:12px 0
 }
+
 #login-dp .social-buttons a{
     width: 49%;
 }
+
 #login-dp .form-group {
     margin-bottom: 10px;
 }
+
 .btn-fb{
     color: #fff;
     background-color:#3b5998;
 }
+
 .btn-fb:hover{
     color: #fff;
     background-color:#496ebc
 }
+
 .btn-tw{
     color: #fff;
     background-color:#55acee;
 }
+
 .btn-tw:hover{
     color: #fff;
     background-color:#59b5fa;
 }
+
 .container-fluid {
   padding-right: 1%;
   padding-left: 1%;
@@ -240,42 +235,8 @@ ul{
         border-top:0 none;
     }
 }
-/*.tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
-}*/
 
-/*.tooltip  {
-  text-size:10px;
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
+/*.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
     color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-    opacity: 0;
-    transition: opacity 1s;
-}
-
-.tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
+    background-color: #080808;
 }*/
