--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -3,6 +3,19 @@ body{
   background-color: #e8e8e8;
   /*background-image: url('../images/bck.jpg');*/
 }
+
+
+
+/*#watermark
+{
+position:fixed;
+bottom:5px;
+right:5px;
+opacity:0.5;
+z-index:99;
+color:white;
+}*/
+
 .cropArea {
   background: #E4E4E4;
   overflow: hidden;
@@ -20,6 +33,7 @@ body{
      font-size: 24px;
      font-weight: 400;
      margin-left: -25px;
+     margin-top: -7px;
      position: relative;
      display: inline-block;
      padding: 8px;
